tests/ui/fail/expr-tuple.stderr
error: Potentially invalid expansion. Expected `::`, `break`, `if`, `return`, a `(`, a `)` or 4 others.
 --> tests/ui/fail/expr-tuple.rs:6:10
  |
6 |         (,)
  |          ^

error: Potentially invalid expansion. Expected `::`, `break`, `if`, `return`, a `(`, a `)` or 4 others.
  --> tests/ui/fail/expr-tuple.rs:13:13
   |
13 |         (42,, 42)
   |             ^

error: Potentially invalid expansion. Expected `!=`, `%`, `&&`, `&`, `*`, `+` or 20 others.
  --> tests/ui/fail/expr-tuple.rs:20:12
   |
20 |         (a b)
   |            ^
